fix contrast

--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
 }
 
 html {
-  font-family: fantasy;
-  background-color: indianred;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: lightblue;
 }
 
 h1 {
-  color: hotpink;
+  color: darkmagenta;
 }
